@@ -3,4 +3,4 @@ AM_CFLAGS = -Wall -O2 -I$(srcdir)/../ -I$(srcdir)/../gen/ -I$(srcdir)/../../
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libstat.a
-libstat_a_SOURCES = basic.c sess_stat.c print_reply.c
+libstat_a_SOURCES = basic.c sess_stat.c print_reply.c stats.h
