@@ -1,5 +1,10 @@
 2007-01-26  Ted Bullock  <tbullock@canada.com>
 
+	* Revised Makefile.am for src directories to explicitly include the
+	.h files to allow make distcheck to pass
+
+2007-01-26  Ted Bullock  <tbullock@canada.com>
+
 	* Removed getopt.c and getopt1.c from build process
 
 	* httperf.c Wrapped call to getopt.h in pre-processor checks
